--- a/src/components/ui/styles.css
+++ b/src/components/ui/styles.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'rookie';
-  src: url('https://github.com/Admonk20/example-app/blob/bc2fc99a26be1ae304f2e173e62103e3f41ec03a/rooster-personal-use.regular.ttf') format('truetype');
+  src: url('rooster-personal-use.regular.ttf') format('truetype');
 }
 
 .font-rookie {
